# lbh-v2

./: .gitignore  AGENTS.md  DESIGN.md  HOW_TO_USE_WITH_CODEX.md  MIGRATION_MAP.md  README.md  pyproject.toml  requirements.txt
docs/: BENCHMARKING.md  CHATGPT_SMOKE_TASK.md  CODEX_LBH_V2_SYSTEM_PROMPT.md  MEMORY_V2.md  OVERVIEW.md  SEMANTIC_EXPECTATIONS.md  V1_TO_V2_MIGRATION.md
examples/: click_resized_point.json  navigate_chatgpt_batch.json
lbh/: __init__.py  actions.py  capture.py  cli.py  common.py  config.py  contracts.py  coordinates.py  errors.py  evaluator.py  locator.py  memory.py  models.py  platform.py  runtime.py  storage.py  task_store.py
tests/: test_cli.py  test_contracts.py  test_coordinates.py  test_evaluator.py  test_memory.py  test_runtime.py  test_task_store.py
