[project]
name = "lbh-v2"
version = "0.2.0"
description = "Local Browser Harness V2: screenshot-based desktop GUI automation runtime"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0.0",
  "pyautogui>=0.9.54",
  "pygetwindow>=0.0.9",
  "pyperclip>=1.8.2",
  "pytest>=8.0.0",
]

[project.scripts]
lbh = "lbh.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
